Cucumber tests - final commit

--- a/app/views/numbersayer/show.html.haml
+++ b/app/views/numbersayer/show.html.haml
@@ -7,6 +7,6 @@
   = f.label :locale
   = f.select :locale, [['English (UK)', 'uk'], ['English (US)', 'us']]
   = f.label :result
-  = f.text_field :result, placeholder: 'Result', readonly: true
+  = f.text_field :result, placeholder: 'Result', readonly: true, value: @reply
   %p.submit-wrapper
     = f.submit 'Translate!', class: 'btn btn-large btn-primary'
